--- a/radio_sources.ipynb
+++ b/radio_sources.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "16f533ba",
+   "id": "035ccf01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ca0f4d63",
+   "id": "2021edc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5003b2e0",
+   "id": "6b7b71c6",
    "metadata": {},
    "source": [
     "# Object properties"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bf8aca6f",
+   "id": "2353c719",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48dea6aa",
+   "id": "dc73ce46",
    "metadata": {},
    "source": [
     "# Search radius"
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a9999ad5",
+   "id": "bc1d238a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e87ae57a",
+   "id": "2cf6b0b8",
    "metadata": {},
    "source": [
     "# Queries"
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eafb6e0",
+   "id": "edb2d083",
    "metadata": {},
    "source": [
     "ASKAP query can fail if you use large search areas"
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7cb592e1",
+   "id": "88ac10d2",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d625d87b",
+   "id": "2cb10904",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "606f184d",
+   "id": "ab7b48c1",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3dcb5e6a",
+   "id": "65d03dfb",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f453f9d3",
+   "id": "542ee853",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9bd7defc",
+   "id": "8cab952a",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "67a10a0e",
+   "id": "bac1be0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,23 +345,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db754515",
+   "id": "f6f2fc4c",
    "metadata": {},
    "source": [
-    "If you search radius is in arcmin, the distance '_r' is in units of arcmin"
+    "If the search radius is in arcmin, the distance '_r' is in units of arcmin"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "332407c3",
+   "id": "27796d34",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div><i>Table length=280</i>\n",
-       "<table id=\"table140445699945040\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140377794194640\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>_r</th><th>recno</th><th>FIRST</th><th>FITS</th><th>RAJ2000</th><th>DEJ2000</th><th>p_S_</th><th>Fpeak</th><th>Fint</th><th>Rms</th><th>MajAxis</th><th>MinAxis</th><th>PA</th><th>fMaj</th><th>fMin</th><th>fPA</th><th>Field</th><th>N1</th><th>r1</th><th>m1</th><th>c1</th><th>N2</th><th>r2</th><th>m2</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th></th><th>&apos;h:m:s&apos;</th><th>&apos;d:m:s&apos;</th><th></th><th>mJy</th><th>mJy</th><th>mJy</th><th>arcsec</th><th>arcsec</th><th>deg</th><th>arcsec</th><th>arcsec</th><th>deg</th><th></th><th></th><th>arcsec</th><th>mag</th><th></th><th></th><th>arcsec</th><th>mag</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>int32</th><th>str16</th><th>str4</th><th>str12</th><th>str12</th><th>float32</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>str12</th><th>int16</th><th>float32</th><th>float32</th><th>str1</th><th>int16</th><th>float32</th><th>float32</th></tr></thead>\n",
@@ -409,14 +409,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e3636e46",
+   "id": "f6a3aa92",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div><i>Table length=148</i>\n",
-       "<table id=\"table140445699839184\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140378120210448\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>_r</th><th>recno</th><th>Field</th><th>Xpos</th><th>Ypos</th><th>NVSS</th><th>RAJ2000</th><th>DEJ2000</th><th>e_RAJ2000</th><th>e_DEJ2000</th><th>S1.4</th><th>e_S1.4</th><th>l_MajAxis</th><th>MajAxis</th><th>l_MinAxis</th><th>MinAxis</th><th>PA</th><th>e_MajAxis</th><th>e_MinAxis</th><th>e_PA</th><th>f_resFlux</th><th>resFlux</th><th>polFlux</th><th>polPA</th><th>e_polFlux</th><th>e_polPA</th><th>Image</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th>pix</th><th>pix</th><th></th><th>&apos;h:m:s&apos;</th><th>&apos;d:m:s&apos;</th><th>s</th><th>arcsec</th><th>mJy</th><th>mJy</th><th></th><th>arcsec</th><th></th><th>arcsec</th><th>deg</th><th>arcsec</th><th>arcsec</th><th>deg</th><th></th><th>mJy</th><th>mJy</th><th>deg</th><th>mJy</th><th>deg</th><th></th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>int32</th><th>str8</th><th>float32</th><th>float32</th><th>str14</th><th>str11</th><th>str11</th><th>float32</th><th>float32</th><th>float64</th><th>float32</th><th>str1</th><th>float32</th><th>str1</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>str2</th><th>int16</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>str5</th></tr></thead>\n",
@@ -464,14 +464,14 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6e0513fc",
+   "id": "61ae5309",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div><i>Table length=268</i>\n",
-       "<table id=\"table140447371719312\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140377261117968\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>_r</th><th>recno</th><th>CompName</th><th>CompId</th><th>IslId</th><th>RAJ2000</th><th>DEJ2000</th><th>e_RAJ2000</th><th>e_DEJ2000</th><th>Ftot</th><th>e_Ftot</th><th>Fpeak</th><th>e_Fpeak</th><th>Maj</th><th>e_Maj</th><th>Min</th><th>e_Min</th><th>PA</th><th>e_PA</th><th>FtotIsl</th><th>e_FtotIsl</th><th>Islrms</th><th>Islmean</th><th>ResIdIslrms</th><th>ResidIslmean</th><th>RAMdeg</th><th>DEMdeg</th><th>e_RAMdeg</th><th>e_DEMdeg</th><th>SCode</th><th>Xposn</th><th>e_Xposn</th><th>Yposn</th><th>e_Yposn</th><th>XposnMax</th><th>e_XposnMax</th><th>YposnMax</th><th>e_YposnMax</th><th>MajImgPlane</th><th>e_MajImgPlane</th><th>MinImgPlane</th><th>e_MinImgPlane</th><th>PAImgPlane</th><th>e_PAImgPlane</th><th>DCMaj</th><th>e_DCMaj</th><th>DCMin</th><th>e_DCMin</th><th>DCPA</th><th>e_DCPA</th><th>DCMajImgPlane</th><th>e_DCMajImgPlane</th><th>DCMinImgPlane</th><th>e_DCMinImgPlane</th><th>DCPAImgPlane</th><th>e_DCPAImgPlane</th><th>Tile</th><th>Subtile</th><th>RASdeg</th><th>DESdeg</th><th>NVSSdist</th><th>FIRSTdist</th><th>PeakToRing</th><th>DupFlag</th><th>QualFlag</th><th>NNdist</th><th>BMaj</th><th>BMin</th><th>BPA</th><th>MainSample</th><th>QLcutout</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th></th><th></th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th>mJy</th><th>mJy</th><th>mJy / beam</th><th>mJy / beam</th><th>arcsec</th><th>arcsec</th><th>arcsec</th><th>arcsec</th><th>deg</th><th>deg</th><th>mJy</th><th>mJy</th><th>mJy / beam</th><th>mJy / beam</th><th>mJy / beam</th><th>mJy / beam</th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th></th><th>pix</th><th>pix</th><th>pix</th><th>pix</th><th>pix</th><th>pix</th><th>pix</th><th>pix</th><th>arcsec</th><th>arcsec</th><th>arcsec</th><th>arcsec</th><th>deg</th><th>deg</th><th>arcsec</th><th>arcsec</th><th>arcsec</th><th>arcsec</th><th>deg</th><th>deg</th><th>arcsec</th><th>arcsec</th><th>arcsec</th><th>arcsec</th><th>deg</th><th>deg</th><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th>arcsec</th><th></th><th></th><th></th><th>arcsec</th><th>arcsec</th><th>arcsec</th><th>deg</th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>int32</th><th>str31</th><th>int16</th><th>int16</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float32</th><th>float64</th><th>float32</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>str1</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>str6</th><th>str14</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>uint8</th><th>uint8</th><th>float64</th><th>float32</th><th>float32</th><th>int16</th><th>uint8</th><th>str237</th></tr></thead>\n",
@@ -519,14 +519,14 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cd1d8bed",
+   "id": "b6b272bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div><i>Table length=216</i>\n",
-       "<table id=\"table140445968262096\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140378120188496\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>_r</th><th>id</th><th>catalogue_id</th><th>gaussian_id</th><th>source_id</th><th>tile_id</th><th>sbid</th><th>obs_start_time</th><th>n_gaus</th><th>ra</th><th>dec</th><th>e_ra</th><th>e_dec</th><th>total_flux_gaussian</th><th>e_total_flux_gaussian_pybdsf</th><th>e_total_flux_gaussian</th><th>total_flux_source</th><th>e_total_flux_source_pybdsf</th><th>e_total_flux_source</th><th>peak_flux</th><th>e_peak_flux</th><th>maj_axis</th><th>e_maj_axis</th><th>min_axis</th><th>e_min_axis</th><th>pa</th><th>e_pa</th><th>dc_maj</th><th>e_dc_maj</th><th>dc_min</th><th>e_dc_min</th><th>dc_pa</th><th>e_dc_pa</th><th>s_code</th><th>separation_tile_centre</th><th>noise</th><th>gal_lon</th><th>gal_lat</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th>arcsec</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy / beam</th><th>mJy / beam</th><th>arcsec</th><th>arcsec</th><th>arcsec</th><th>arcsec</th><th>deg</th><th>deg</th><th>arcsec</th><th>arcsec</th><th>arcsec</th><th>arcsec</th><th>deg</th><th>deg</th><th></th><th>deg</th><th>mJy / beam</th><th>deg</th><th>deg</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>int64</th><th>int64</th><th>str19</th><th>str19</th><th>str13</th><th>int64</th><th>float64</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>str1</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
